# solana-analysis-bot

./: .env  .env.example  EVOLUTION_API_SETUP.md  GITHUB_ACTIONS_SETUP.md  GITHUB_SECRETS_SETUP.md  HYBRID_ANALYSIS_SETUP.md  HYBRID_WORKFLOW_READY.md  NEXT_STEPS.md  README.md  README_Autonomous_Trading_Agent.md  README_PATTERN_ANALYSIS.md  README_SINGLE_O3.md  SOL_Trading_Analysis.md  TWILIO_TEMPLATE_SETUP.md  UPGRADE_SUMMARY.md  WHATSAPP_DELIVERY_TROUBLESHOOTING.md  WHATSAPP_EVOLUTION_READY.md  WHATSAPP_SETUP_GUIDE.md  WHATSAPP_TEMPLATE_SETUP.md  WORKFLOW_READY.md  advanced_crypto_agent.py  clean_o3_workflow.py  coinalyze_crypto_agent.py  coinalyze_solana_agent.py  debug_main.py  debug_whatsapp.py  docker-compose.evolution.yml  enhanced_analysis.json  enhanced_solana_workflow.py  enhanced_whatsapp_sender.py  env_example.txt  evolution_whatsapp.py  main.py  o3_enhanced_analysis.json  o3_enhanced_solana_agent.py  o3_enhanced_solana_agent.py.backup  o3_pattern_workflow.py  pattern_aware_solana_agent.py  pyproject.toml  quick_test_debug.py  (+32 more)
.github/workflows/: sol-analysis.yml  sol-hybrid-analysis.yml  solana-analysis.yml  test-whatsapp.yml
