[project]
name = "solana-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.97",
    "openai>=1.98.0",
    "requests>=2.32.4",
    "yfinance>=0.2.65",
    "solana>=0.34.2",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]
