[project]
name = "solana-analysis-bot"
version = "0.1.0"
description = "Advanced Solana (SOL) cryptocurrency analysis bot using o3 AI model for comprehensive market analysis and trading strategies"
readme = "README_Autonomous_Trading_Agent.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.98",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "solana>=0.36.7",
    "solders>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
